Fix: #26256.
- Added null check so corrupt/older configs on builds with SCM.

Signed-off-by: prathamalwayscomeslast <way4hell6@gmail.com>